--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
                 </form>
             </div>
             <div class="col-4 text-center">
-                <a target="_self" href="Index.html"><img src="images/logo.png" alt="Wazoogles Logo" style="height: 150px;"></a> 
+                <a target="_self" href="index.html"><img src="images/logo.png" alt="Wazoogles Logo" style="height: 150px;"></a> 
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="text-muted" href="html/cart.html">
